# python-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: index.md
src/my_project/: __init__.py
tests/: test_core.py
